--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <li class="nav-itemColor">
               <a href="#" class="nav-link1">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="#" class="nav-link2">Movie</a>
             </li>
 
             <li class="nav-item">
-              <a href="#" class="nav-link3">Categorie</a>
+              <a href="#" class="nav-link3">Categorie</a> -->
               <!--<ul class="menu_nesting">
                     <li class="menu_inside">
                         <a href="#" class="menu_link menu_link--inside">Popular</a>
@@ -72,17 +72,17 @@
           </ul>
         </div>
         <a href="#" class="nav-burger">
-          <img src="/images/burger.png" alt="nav_icon"
+          <img src="images/burger.png" alt="nav_icon"
         /></a>
         <a href="#" class="nav-close">
-          <img src="/images/close.png" alt="nav_icon_close"
+          <img src="images/close.png" alt="nav_icon_close"
         /></a>
       </nav>
     </header>
 
     <main class="main">
       <button class="btn-light">
-        <img src="/images/day.svg" alt="" class="day" />
+        <img src="images/day.svg" alt="" class="day" />
         <!-- <img src="./night.svg" alt="" class="night" /> -->
       </button>
 
