--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="error-container" id="error-container"></div>
     <header class="hero">
       <nav class="nav container" id="nav">
-        <h2 class="nav-logo">TuLogo</h2>
+        <h2 class="nav-logo">Movie</h2>
         <div class="nav-links">
           <form class="input">
             <input type="text" placeholder="search" id="search_bar" />
@@ -71,8 +71,8 @@
             </li> -->
           </ul>
         </div>
-        <a href="#" class="nav-burger">
-          <img src="images/burger.png" alt="nav_icon"
+        <a class="nav-burger">
+          <img src="images/burger.png" alt="nav_icon" class="nav_images"
         /></a>
         <!-- <a href="#" class="nav-close">
           <img src="images/close.png" alt="nav_icon_close"
@@ -113,10 +113,10 @@
       </div>
       <div id="posterContainer" class="pruebadeestilos"></div>
       <div id="ShowandHiddeCards">
-        <button class="btn-light">
+        <!-- <button class="btn-light">
           <img src="images/day.svg" alt="" class="day" />
-          <!-- <img src="./night.svg" alt="" class="night" /> -->
-        </button>
+          <img src="./night.svg" alt="" class="night" />
+        </button> -->
 
         <section>
           <template class="carousel-template" id="carousel-template">
